GUI feature see the action live

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 # Path to your NetLogo installation
-NETLOGO_HOME=C:/Program Files/NetLogo 6.4.0
+NETLOGO_HOME=C:/Program Files/NetLogo 7.0.3
 
 # Path to your Java JDK installation
-JAVA_HOME=C:/Program Files/Eclipse Adoptium/jdk-21.0.6.7-hotspot
+JAVA_HOME=C:/Program Files/Eclipse Adoptium/jdk-25.0.2.10-hotspot
 
 # (Optional) Directory where .nlogo model files are stored
 # Defaults to the models/ folder in this project
-# NETLOGO_MODELS_DIR=C:/Users/you/Desktop/MCP_NetLogo/models
+# NETLOGO_MODELS_DIR=C:/Users/you/Desktop/NetLogo_MCP/models
+
+# (Optional) Set to "true" to open a live NetLogo GUI window
+# Default is "false" (headless mode — faster, no window)
+# NETLOGO_GUI=true
